Update copyright line

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<span id="result"></span>  <br/>
 			</div>
 			
-			<footer>&#169; This Calculator belongs to Gemma</footer>
+			<footer>&#169; Everyone Can Get Rich</footer>
 		</div>
     </body>
 </html>
